# minimum-spanning-tree

./: .gitignore  README.md  pyproject.toml
src/: kruskal_example.py
src/minimum_spanning_tree/: __init__.py  kruskal.py
tests/: test_kruskal.py
